# christofides-algorithm

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  readme.md  testgen.py
graphs/: FullyConnectedMetricGraph.cpp  FullyConnectedMetricGraph.hpp  cityroadmap.hpp  distmap.cpp  distmap.hpp  graph.cpp  graph.hpp  pointset.cpp  pointset.hpp
interface/: IGraph.hpp  IMutableGraph.hpp
min-matching/: matching.cpp  matching.hpp
mst/: prim.cpp  prim.hpp
test-outputs/: presets.txt  random-points.txt
tests/: gr17.in  p01.in  tsplib26.in  tsplib42.in  us48.in
tsp/: christofides.cpp  christofides.hpp  solve.cpp  solve.hpp  tourweight.cpp  tourweight.hpp
